calculator/css/style.css
*{
	box-sizing: border-box;
}
.container{
	width: 100%;
}
.calculator{
	width:500px;
	background: #CC9999;
	margin: auto;
	border-radius: 10px;
	padding: 30px;
}

input{
	width:100%;
	height: 50px;
	outline: none;
	text-align: right;
}

.buttons{
	width:100%;
	text-align: center; /*让.buttons中的button居中*/
	margin-top: 30px;
}

button{
	width: 100px;
	height: 60px;
	margin: 3px;
	cursor: pointer;
	background: #fff;
	transition: background .5s;
	border: none;
}

button:hover{
	background: #666666;
}

